@@ -5,6 +5,10 @@ Version 0.6
 * code cleanup
 * bigger map in edit view
 * button to grab current location
+* PHPDoc inline documentation added where applicable
+* Address is now stored
+* Datatype can now be used as a name pattern component
+* Datatype is now searchable
 
 
 Version 0.5
